--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,7 @@ Thumbs.db
 *.rc
 /.qmake.cache
 /.qmake.stash
-/build*
+/build*/
 /build-Pathfinding_GUI-Desktop_Qt_6_2_1_MinGW_64_bit-Debug/
 /build-Pathfinding_GUI-Desktop-Debug/
 
